# asteroids

./: .pre-commit-config.yaml  pyproject.toml
src/asteroids/: __main__.py  action.py  agent.py  buffer.py  constants.py  edge_policy.py  env.py  history.py  models.py  plotting.py
src/asteroids/cli/: __init__.py  asteroids_cli.py  auto_play_cli.py  common_flags.py  play_cli.py  train_cli.py
